fixed table layout add cellspacing only for columns where cells originate. bug 220653 r/sr=bzbarsky